Preventing autocomplete dropdown from being cut off.

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -315,6 +315,7 @@ table.resources td.count {
 }
 
 #society-resource-tabs .nootabs-selected-tab {
+    overflow: visible;
     -moz-border-radius-topright:5px;
     -webkit-border-top-right-radius: 5px;
 }
